added hyperlinks on homepage

--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -5,11 +5,12 @@
 			<h2>Yanwen Wang</h2>
 			<h4>Front End Developer</h4>
 			<div class="icon">
-				<a href="#"><i class="fa fa-linkedin-square fa-3x"></i></a>
-				<a href="#"><i class="fa fa-github-square fa-3x"></i></a>
-				<a href="#"><i class="fa fa-envelope-o fa-3x"></i></a>
+				<a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4"><i class="fa fa-linkedin-square fa-3x"></i></a>
+				<a href="https://github.com/Yanwenwang"><i class="fa fa-github-square fa-3x"></i></a>
+				<a href="mailto:someone@yoursite.com?cc=someoneelse@theirsite.com, another@thatsite.com, me@mysite.com&bcc=lastperson@theirsite.com&subject=Big%20News&body=Body-goes-here"><i class="fa fa-envelope-o fa-3x"></i></a>
 			</div>
 		</div>
+		
 	</section>
 
 	<section class="backgrounds">
