added height to home hero container

--- a/src/app/home/scss/_home.scss
+++ b/src/app/home/scss/_home.scss
@@ -10,6 +10,11 @@
 		width: 100%;
 		position: relative;
 
+		.container {
+			height: 640px;
+			position: relative;
+		}
+
 	    .content { 
 	    	border: 2px solid #f2f2f2;
 	        padding: 30px 115px 30px 115px; 
