--- a/src/app/home/scss/_home.scss
+++ b/src/app/home/scss/_home.scss
@@ -16,13 +16,10 @@
 		}
 
 	    .content { 
+	    	margin-top: 150px;
 	    	border: 2px solid #f2f2f2;
-	        padding: 30px 115px 30px 115px; 
-	        position: absolute;
+	        padding: 30px 60px; 
 	        display: inline-block;
-	        top: 50%;
-	        left: 50%;
-	        transform: translate(-50%, -50%);
 	    }
 
 	    .content h2 { margin: 0; }
